@@ -999,6 +999,127 @@ throw|throw
 name|startupError
 throw|;
 block|}
+try|try
+init|(
+name|SolrZkClient
+name|zkClient
+init|=
+operator|new
+name|SolrZkClient
+argument_list|(
+name|zkServer
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|,
+name|AbstractZkTestCase
+operator|.
+name|TIMEOUT
+argument_list|,
+literal|45000
+argument_list|,
+literal|null
+argument_list|)
+init|)
+block|{
+name|int
+name|numliveNodes
+init|=
+literal|0
+decl_stmt|;
+name|int
+name|retries
+init|=
+literal|60
+decl_stmt|;
+name|String
+name|liveNodesPath
+init|=
+literal|"/solr/live_nodes"
+decl_stmt|;
+comment|// Wait up to 60 seconds for number of live_nodes to match up number of servers
+do|do
+block|{
+if|if
+condition|(
+name|zkClient
+operator|.
+name|exists
+argument_list|(
+name|liveNodesPath
+argument_list|,
+literal|true
+argument_list|)
+condition|)
+block|{
+name|numliveNodes
+operator|=
+name|zkClient
+operator|.
+name|getChildren
+argument_list|(
+name|liveNodesPath
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+operator|.
+name|size
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|numliveNodes
+operator|==
+name|numServers
+condition|)
+block|{
+break|break;
+block|}
+block|}
+name|retries
+operator|--
+expr_stmt|;
+if|if
+condition|(
+name|retries
+operator|==
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"Solr servers failed to register with ZK."
+operator|+
+literal|" Current count: "
+operator|+
+name|numliveNodes
+operator|+
+literal|"; Expected count: "
+operator|+
+name|numServers
+argument_list|)
+throw|;
+block|}
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+block|}
+do|while
+condition|(
+name|numliveNodes
+operator|!=
+name|numServers
+condition|)
+do|;
+block|}
 name|solrClient
 operator|=
 name|buildSolrClient
